syntax = "proto3";

import "google/protobuf/timestamp.proto";

package v1.snapshot;

enum SnapshotStatus {
  Unknown = 0;
  Online  = 1;
}

message SnapshotState {
  string                         uuid = 1;
  SnapshotStatus               status = 2;
  // Creation timestamp of the snapshot.
  google.protobuf.Timestamp timestamp = 3;
  // Size allocated to the snapshot.
  uint64               allocated_size = 4;
  string                    source_id = 5;
}

message VolumeReplicaSnapshotState {
  oneof state {
    ReplicaSnapshotState        online = 1;
    ReplicaSnapshotSourceState offline = 2;
  }
}

message ReplicaSnapshotSourceState {
  string                         uuid = 1;
  string                   replica_id = 2;
  string                    pool_uuid = 3;
  string                      pool_id = 4;
}

message ReplicaSnapshotState {
  string                          uuid = 1;
  string                    replica_id = 2;
  string                     pool_uuid = 3;
  string                       pool_id = 4;
  SnapshotStatus                status = 5;
  // Creation timestamp of the snapshot.
  google.protobuf.Timestamp  timestamp = 6;
  // Size of the snapshot (typically follows source size).
  uint64                  replica_size = 7;
  // Size allocated to the snapshot.
  uint64                allocated_size = 8;
  // Predecessor allocated size of the snapshot.
  uint64        predecessor_alloc_size = 9;
  /// Number of clones created from this snapshot.
  uint64                   num_clones = 10;
  // Transaction Id that defines this snapshot when it is created.
  string                       txn_id = 11;
  // Whether this replica snapshot is valid w.r.t all attributes.
  bool                          valid = 12;
  // Name of the snapshot.
  string                         name = 13;
  // id of the entity for which snapshot is taken.
  string                    entity_id = 14;
  // ready for usage, i,e source for another volume.
  bool                ready_as_source = 15;
}
